--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@iconify/react": "^3.2.2",
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
