--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropdown": "^1.10.0",
     "react-hot-toast": "^2.3.0",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
+    "react-select": "^5.4.0",
     "sass": "^1.54.2"
   },
   "devDependencies": {
