--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^12.2.5",
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
     "react-paginate": "^8.1.3",
