--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "faker": "^6.6.6",
     "moment": "^2.29.4",
     "next": "^12.2.5",
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
