--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-select": "^5.4.0",
-    "sass": "^1.54.2"
+    "sass": "^1.54.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
