--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "faker": "^6.6.6",
+    "html-react-parser": "^3.0.4",
     "moment": "^2.29.4",
     "next": "^12.2.5",
     "next-seo": "^5.4.0",
@@ -28,6 +31,7 @@
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.3.0",
     "react-paginate": "^8.1.3",
     "react-popper": "^2.3.0",
@@ -42,9 +46,11 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@next/bundle-analyzer": "^12.2.0",
     "@testing-library/react": "^13.3.0",
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-datepicker": "^4.8.0",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
