--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-redux": "^8.0.2",
     "react-select": "^5.4.0",
     "sass": "^1.54.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.1/xlsx-0.19.1.tgz"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
