--- a/.eslintrc
+++ b/.eslintrc
@@ -17,10 +17,7 @@
   "overrides": [
     // Configuration for TypeScript files
     {
-      "files": [
-        "**/*.ts",
-        "**/*.tsx"
-      ],
+      "files": ["**/*.ts", "**/*.tsx"],
       "plugins": [
         "@typescript-eslint",
         "unused-imports",
@@ -68,6 +65,6 @@
         "no-param-reassign": "off",
         "no-underscore-dangle": "off"
       }
-    },
+    }
   ]
 }
